# devops_demo

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml  test_endpoints.sh
.github/workflows/: docker-publish.yml
tests/: test_main.py
