[project]
name = "project-1"
version = "0.1.0"
description = "Simple fastapi app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]